SERVER-20270 SERVER-19608 Fix race condition around updating ShardRegistry on CSRS membership changes