src/mongo/s/server.cpp
@@ -221,7 +221,8 @@ static ExitCode runMongosServer() {
     globalConnPool.addHook(new ShardingConnectionHook(false));
     shardConnectionPool.addHook(new ShardingConnectionHook(true));
 
-    ReplicaSetMonitor::setConfigChangeHook(&ConfigServer::configOrShardReplicaSetChange);
+    ReplicaSetMonitor::setAsynchronousConfigChangeHook(&ConfigServer::shardReplicaSetChange);
+    ReplicaSetMonitor::setSynchronousConfigChangeHook(&ConfigServer::configReplicaSetChange);
 
     // Mongos connection pools already takes care of authenticating new connections so the
     // replica set connection shouldn't need to.
